# segmap

./: .gitignore  LICENSE  README.md  dependencies.rosinstall
laser_mapper/: CMakeLists.txt  README.md  package.xml
laser_mapper/include/laser_mapper/: laser_mapper.hpp
laser_mapper/launch/: laser_mapper.launch
laser_mapper/launch/kitti/: icp_dynamic_outdoor.yaml  input_filters_outdoor.yaml  kitti_localization.launch  kitti_localization.yaml  kitti_loop_closure.launch  kitti_loop_closure.yaml
laser_mapper/profiling/: placeholder
laser_mapper/src/: laser_mapper.cpp  laser_mapper_node.cpp
noiser/: CMakeLists.txt  package.xml
noiser/config/: noiser_config.yaml
noiser/include/noiser/: noiser.hpp  tf_drift.hpp
noiser/launch/: tf_drift_node.launch
noiser/src/: noiser.cpp  tf_drift.cpp
segmapper/: CMakeLists.txt  README.md  package.xml
segmapper/include/segmapper/: segmapper.hpp
segmapper/launch/: segmapper.launch  test.rvi
segmapper/launch/bosch/: bosch_localization.launch  bosch_localization.yaml  bosch_mapping.launch  bosch_mapping.yaml  cnn_bosch_depth_cam.launch  cnn_bosch_depth_cam.yaml  cnn_bosch_lidar.launch  cnn_bosch_lidar.yaml  cnn_nclt_depth_cam.launch  cnn_nclt_depth_cam.yaml  icp_dynamic_outdoor.yaml  input_filters_outdoor_depth_cam.yaml  segmentation_id_color.yaml
segmapper/launch/kitti/: cnn_bosch.launch  cnn_bosch.yaml  cnn_kitti_loop_closure.launch  cnn_kitti_loop_closure.yaml  input_filters_outdoor.yaml  kitti_localization.launch  kitti_localization.yaml  kitti_loop_closure.launch  kitti_loop_closure.yaml
segmapper/launch/nclt/: cnn_nclt_lidar.launch  cnn_nclt_lidar.yaml  input_filters_outdoor.yaml  input_filters_outdoor_depth_cam.yaml  input_filters_outdoor_lidar.yaml  nclt_loop_closure.launch  nclt_tuninc_comments.txt
segmapper/src/: segmapper.cpp  segmapper_node.cpp
segmapper/srv/: SaveMap.srv
segmatch/: CMakeLists.txt  Doxyfile.in  mainpage.dox  package.xml
segmatch/include/segmatch/: common.hpp  database.hpp  dynamic_voxel_grid.hpp  features.hpp  id_pair_hash.hpp  local_map.hpp  opencv_random_forest.hpp  parameters.hpp  point_extended.hpp  rviz_utilities.hpp  segmatch.hpp  segmented_cloud.hpp  utilities.hpp
segmatch/include/segmatch/descriptors/: autoencoder.hpp  cnn.hpp  cnn_ros_publisher.hpp  descriptors.hpp  eigenvalue_based.hpp  ensemble_shape_functions.hpp  fpfh.hpp  grsd.hpp  shot.hpp  tf_interface.hpp
segmatch/include/segmatch/impl/: dynamic_voxel_grid.hpp  local_map.hpp
segmatch/include/segmatch/normal_estimators/: incremental_normal_estimator.hpp  normal_estimator.hpp  simple_normal_estimator.hpp
segmatch/include/segmatch/points_neighbors_providers/: kdtree_points_neighbors_provider.hpp  octree_points_neighbors_provider.hpp  points_neighbors_provider.hpp
segmatch/include/segmatch/points_neighbors_providers/impl/: kdtree_points_neighbors_provider.hpp  (+1 more)
segmatch/include/segmatch/recognizers/: correspondence_recognizer.hpp  correspondence_recognizer_factory.hpp  geometric_consistency_recognizer.hpp  graph_based_geometric_consistency_recognizer.hpp  graph_utilities.hpp  incremental_geometric_consistency_recognizer.hpp  matches_partitioner.hpp  partitioned_geometric_consistency_recognizer.hpp
segmatch/include/segmatch/search/: point_representation_spec.hpp  segmatch_distance_function.hpp  segmatch_point_representation.hpp  semantic_kdtree_flann.hpp
segmatch/include/segmatch/segmenters/: euclidean_segmenter.hpp  incremental_segmenter.hpp  region_growing_policy.hpp  region_growing_segmenter.hpp  segmenter.hpp  segmenter_factory.hpp  segmenters.hpp  smoothness_constraints_segmenter.hpp
segmatch/msg/: batch_full_forward_pass.msg  batch_full_forward_pass_msg.msg  cnn_input_msg.msg  cnn_output_msg.msg  sem_input_msg.msg  sem_output_msg.msg
segmatch/python/: autoencoder_descriptor_script.py  autoencoder_node.ipynb  autoencoder_node.py  display_matched_segments.py  dynamic_average.py  eigenvalues.py  import_export.py  is_it_a_car.py  make_euler.sh  match_segments.py  reconstruction_script.py  utilities.py  visuals.py  voxelize.py
segmatch/python/autoencoder/: batchmaker.py  model.py
segmatch/python/classifier/: plot_reconstructions.py
segmatch/src/: common.cpp  database.cpp  dynamic_voxel_grid.cpp  features.cpp  local_map.cpp  opencv_random_forest.cpp  rviz_utilities.cpp  segmatch.cpp  segmented_cloud.cpp
segmatch/src/descriptors/: autoencoder.cpp  cnn.cpp  cnn_ros_publisher.cpp  descriptors.cpp  eigenvalue_based.cpp  ensemble_shape_functions.cpp  fpfh.cpp  grsd.cpp  shot.cpp  tf_cnn_interface.py  tf_interface.cpp  tf_interface.py  tf_sem_interface.py
segmatch/src/normal_estimators/: incremental_normal_estimator.cpp  normal_estimator.cpp  simple_normal_estimator.cpp
segmatch/src/points_neighbors_providers/: kdtree_points_neighbors_provider.cpp  octree_points_neighbors_provider.cpp
segmatch/src/recognizers/: correspondence_recognizer_factory.cpp  geometric_consistency_recognizer.cpp  graph_based_geometric_consistency_recognizer.cpp  incremental_geometric_consistency_recognizer.cpp  partitioned_geometric_consistency_recognizer.cpp
segmatch/src/search/: semantic_kdtree_flann.cpp
segmatch/src/segmenters/: euclidean_segmenter.cpp  incremental_segmenter.cpp  region_growing_segmenter.cpp  segmenter_factory.cpp  smoothness_constraints_segmenter.cpp
segmatch/test/: fpfh_debug.cpp  recognizer_test_data.hpp  test_dynamic_voxel_grid.cpp  test_empty.cpp  test_geometric_consistency_recognizer.cpp  test_graph_utilities.cpp  test_incremental_geometric_consistency_recognizer.cpp  test_incremental_normal_estimator.cpp  test_incremental_segmenter.cpp  test_main.cpp  test_matches_partitioner.cpp  test_partitioned_geometric_consistency_recognizer.cpp
segmatch_ros/: CMakeLists.txt  README.md  package.xml
segmatch_ros/include/segmatch_ros/: common.hpp  segmatch_worker.hpp
segmatch_ros/src/: segmatch_worker.cpp
tf_graph_executor/: CMakeLists.txt  package.xml
tf_graph_executor/include/tf_graph_executor/: tf_graph_executor.hpp
tf_graph_executor/src/: cpp11abi_translator.cpp  tf_graph_executor.cpp
(+43 files in other folders)
