<?xml version="1.0"?>
<package format="2">
  <name>laser_mapper</name>
  <version>0.0.1</version>
  <description>laser_mapper</description>
  
  <author email="rdube@ethz.ch">Renaud Dubé</author>
  <author email="gawela@ethz.ch">Abel Gawel</author>
  
  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>laser_slam</depend>
  <depend>laser_slam_ros</depend>
  <depend>libpointmatcher</depend>
  <depend>libpointmatcher_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>minkindr</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>segmatch</depend>  
  <depend>segmatch_ros</depend>  
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>

