<?xml version="1.0"?>
<package format="2">
  <name>noiser</name>
  <version>0.0.1</version>
  <description>noiser</description>


  <maintainer email="marius.lukas.bruehlmeier@gmail.com">Marius</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>laser_slam</depend>
  <depend>message_runtime</depend>
  <depend>minkindr</depend>
  <depend>roscpp</depend>
  <depend>pcl_catkin</depend>

</package>
