<?xml version="1.0"?>
<package format="2">
  <name>segmatch</name>
  <version>0.0.1</version>
  <description>segmatch</description>

  <author email="rdube@ethz.ch">Renaud Dubé</author>
  <author email="dugasd@students.ethz.ch">Daniel Dugas</author>
  <author email="mattia.gollub@hotmail.ch">Mattia G. Gollub</author>
  
  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>laser_slam</depend>
  <depend>libopencv-dev</depend>
  <depend>minkindr</depend>
  <depend>pcl_catkin</depend>
  <depend>roscpp</depend>
</package>
