<?xml version="1.0"?>
<package format="2">
  <name>segmatch</name>
  <version>0.0.1</version>
  <description>segmatch</description>

  <author email="renaudube@gmail.com">Renaud Dubé</author>
  <author email="dugasd@ethz.ch">Daniel Dugas</author>
  <author email="mattia.gollub@hotmail.ch">Mattia G. Gollub</author>
  <author email="andrei.cramariuc@gmail.com">Andrei Cramariuc</author>
  
  <maintainer email="renaudube@gmail.com">Renaud Dubé</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>laser_slam</depend>
  <depend>minkindr</depend>
  <depend>pcl_catkin</depend>
  <depend>roscpp</depend>
  <depend>tf_graph_executor</depend>
</package>
