<?xml version="1.0"?>
<package format="2">
  <name>segmatch_ros</name>
  <version>0.0.1</version>
  <description>segmatch_ros</description>
  
  <author email="rdube@ethz.ch">Renaud Dubé</author>
  <author email="dugasd@students.ethz.ch">Daniel Dugas</author>
  
  <maintainer email="rdube@ethz.ch">Renaud Dubé</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam_catkin</depend>
  <depend>laser_slam</depend>
  <depend>message_runtime</depend>
  <depend>minkindr</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>segmatch</depend>  
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
</package>

