<?xml version="1.0"?>
<package format="2">
  <name>tf_graph_executor</name>
  <version>0.0.1</version>
  <description>tf_graph_executor</description>


  <maintainer email="martin.pecka@cvut.cz">Martin Pecka</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>cmake_modules</depend>
  <depend>doxygen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>tensorflow_ros_cpp</depend>
</package>
